# starter-finance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/: example_portfolio.csv
src/starter_finance/: metrics.py  report.py
tests/: test_metrics.py
